fixed some default margin weirdness on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   overflow: hidden;
   background-color: #e2dee2;
   color: var(--lightest);
+  margin: 0;
+  padding: 0;
 }
 
 .upper-wrapper {
@@ -34,4 +36,6 @@ body {
 
 canvas {
   background-color: var(--dark);
+  max-width: 100%;
+  max-height: 100%;
 }
